[package]
name = "rusty_backend"
version = "0.1.0"
edition = "2018"
authors = ["Käthe Specht <xpecht@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "^1.5"
serde = { version = "^1.0.104", features = ["derive"] }
serde_json = "^1.0.48"

[dev-dependencies]
native-tls = "^0.2"
sqlx = { version = "^0.5", features = [ "runtime-tokio-rustls", "mysql" ] }
tokio = { version = "^1", features = ["full"] }
warp = "^0.3"

[lib]
name="rusty_backend"
test = true
plugin = false
