[package]
name = "rustract"
version = "0.1.0"
edition = "2018"
license = "MIT"
repository = "https://github.com/k-specht/rustract"
authors = ["Käthe Specht <xpecht@gmail.com>"]
description = "A Rust library for safely extracting JSON fields while also checking data bounds."
keywords = [ "json", "extractor", "webapp" ]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "^1.5"
serde = { version = "^1.0.104", features = ["derive"] }
serde_json = "^1.0.48"

[dev-dependencies]
native-tls = "^0.2"
sqlx = { version = "^0.5", features = [ "runtime-tokio-rustls", "mysql" ] }
tokio = { version = "^1", features = ["full"] }
warp = "^0.3"
lazy_static = "^1.4.0"

[lib]
name="rustract"
test = true
plugin = false
